deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-ingress
spec:
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: bsgroups/test-kongingress:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1323
---
apiVersion: v1
kind: Service
metadata:
  name: test-ingress
  labels:
    app: test-app
spec:
  selector:
    app: test-app
  ports:
  - port: 1323
    name: test-svc
    targetPort: 1323
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-kongingress-rule
  annotations:
    kubernetes.io/ingress.class: "kong"
    configuration.konghq.com: test-kongingress-rule
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /test/ingress
        backend:
          serviceName: test-ingress
          servicePort: test-svc
